tests/pass/RightShift.java
// File 	: Remainder.java
// Created 	: 03.03.2020
// Author 	: Ahmed Khalil

package pass;

public class RightShift {
	public int rightshift(int x, int y){
		return x >> y;
	}
}