tests/fail/RightShift.java
// File 	: RightShift.java
// Created 	: 03.03.2020
// Author 	: Ahmed Khalil

package fail;

import java.lang.System;

public class RightShift {
	public static void main(String[] args) {
		System.out.println('a' >> 42);
	}
}